gitlab-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: gitlab
  name: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gitlab
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: gitlab
    spec:
      containers:
      - env:
        - name: GITLAB_OMNIBUS_CONFIG
          value: |
            external_url "http://gitlab.jmpesp.local"
            letsencrypt['enabled'] = false
            nginx['enable'] = true
            nginx['redirect_http_to_https'] = false
        image: gitlab/gitlab-ce:latest
        imagePullPolicy: ""
        name: gitlab
        ports:
        - containerPort: 22
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
