artifactory-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: artifactory
  name: artifactory
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8081
  - name: "8082"
    port: 8082
    targetPort: 8082
  selector:
    io.kompose.service: artifactory
