gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: gitlab
  name: gitlab
spec:
  ports:
  - name: "ssh"
    port: 22
    targetPort: 22
  - name: "web"
    port: 8888
    targetPort: 80
  selector:
    io.kompose.service: gitlab
