jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "50000"
    port: 50000
    targetPort: 50000
  selector:
    io.kompose.service: jenkins
